# GO2-seeing-eye-dog

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  DATA.md  EVALUATION.md  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docker/nemo-ros2/: Dockerfile  docker-compose.yml
docs/: architecture.md  debugging.md  hardware_assumptions.md  release_checklist.md  ros_graph.md
evaluation/: eval_speaker_id.py  run_synthetic_eer.py
evaluation/results/: synthetic_eer.json
evaluation/tests/: test_eer.py
go2_audio_perception/: package.xml  setup.cfg  setup.py
go2_audio_perception/go2_audio_perception/: audio_perception_node.py  nemo_asr_node.py
go2_audio_perception/launch/: nemo_integration.launch.py
go2_audio_perception/test/: test_gcc_phat.py
go2_bringup/: package.xml  setup.cfg  setup.py
go2_bringup/launch/: go2_full.launch.py  sim_launch.py
go2_gait_controller/: CMakeLists.txt  README.md  package.xml
go2_gait_controller/config/: gait_params.yaml
go2_gait_controller/include/go2_gait_controller/: gait_controller_node.hpp
go2_gait_controller/launch/: gait_controller_launch.py  gait_hw_launch.py  gait_sim_launch.py
go2_gait_controller/scripts/: hw_bridge.py  set_stand_pose.py
go2_gait_controller/src/: gait_controller_node.cpp  main.cpp
go2_gait_controller/worlds/: gait_test_world.world
go2_intent_grounding/: package.xml  setup.cfg  setup.py
go2_intent_grounding/go2_intent_grounding/: fusion.py  intent_grounding_node.py
go2_intent_grounding/test/: test_fusion.py
go2_msgs/: CMakeLists.txt  package.xml
go2_msgs/msg/: ConfirmedTarget.msg  DetectedHuman.msg  DetectedHumanArray.msg  PipelineMetrics.msg  SafetyAlert.msg
go2_navigation/: CMakeLists.txt  package.xml
go2_navigation/behavior_trees/: navigate_to_pose_recovery.xml
go2_navigation/config/: nav2_params.yaml
go2_perception/: package.xml  setup.cfg  setup.py
go2_perception/go2_perception/: perception_node.py  pipeline_metrics_logger.py
go2_safety_monitor/: package.xml  setup.cfg  setup.py
go2_safety_monitor/go2_safety_monitor/: safety_monitor_node.py
go2_voice_commander/: package.xml  setup.cfg  setup.py
go2_voice_commander/go2_voice_commander/: voice_commander_node.py
go2_voice_commander/test/: test_voice_commander.py
perception_opt/: BENCHMARKS.md  README.md
perception_opt/bench/: bench_tensorrt.py  run_bench.py
perception_opt/kernels/: depth_to_pointcloud.py  fused_safety.py
perception_opt/results/: bench_rtx5070.json  bench_tensorrt_rtx5070.json
perception_opt/tests/: test_kernels_parity.py
scripts/: bootstrap.sh  lint.sh  repo_doctor.py  ros_inspect.sh  run.sh  test.sh  validate.sh
