<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_intent_grounding</name>
  <version>1.0.0</version>
  <description>Intent grounding node: fuses audio and visual detections to lock onto a confirmed caller.</description>

  <maintainer email="yusuf.a.guenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>go2_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
