<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_navigation</name>
  <version>1.0.0</version>
  <description>Nav2 configuration and launch files for the GO2 Seeing-Eye Dog.</description>

  <maintainer email="yusuf.a.guenena@gmail.com">Yusuf Guenena</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>nav2_bringup</exec_depend>
  <exec_depend>nav2_amcl</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
